# libsodium-cryptography-demo

./: .gitignore  CHAP-flow.md  CMakeLists.txt  README.md
src/: chap_demo.cpp  crypto_utils.cpp  crypto_utils.h  encrypt_mac.cpp  mqtt_chap_client.cpp  mqtt_chap_server.cpp  mqtt_hash_client.cpp  mqtt_hash_server.cpp  password_client.cpp  password_server.cpp
